--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.1.3",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "react-visibility-sensor": "^5.1.1"
   }
 }
