--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,8 @@
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-scroll": "^1.9.0",
     "react-visibility-sensor": "^5.1.1"
   }
 }
