--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,13 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "jose": "^5.2.3",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.9.2",
     "next": "14.1.3",
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-scroll": "^1.9.0",
     "react-visibility-sensor": "^5.1.1"
+  },
+  "devDependencies": {
+    "@types/node": "20.11.26",
+    "@types/react": "18.2.65",
+    "typescript": "5.4.2"
   }
 }
