--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.6.7",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.0.0",
     "dotenv": "^16.4.5",
     "jose": "^5.2.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
-    "next": "14.1.3",
+    "next": "^14.2.14",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
