--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.6.7",
+    "caniuse-lite": "^1.0.30001667",
     "cookie-parser": "^1.0.0",
     "dotenv": "^16.4.5",
     "jose": "^5.2.3",
@@ -24,7 +25,8 @@
     "react-icons": "^5.0.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-scroll": "^1.9.0",
-    "react-visibility-sensor": "^5.1.1"
+    "react-visibility-sensor": "^5.1.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "20.11.26",
