--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.6.7",
     "caniuse-lite": "^1.0.30001667",
+    "chart.js": "^4.4.4",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "cookie-parser": "^1.0.0",
     "dotenv": "^16.4.5",
     "jose": "^5.2.3",
@@ -19,6 +21,8 @@
     "mysql2": "^3.9.2",
     "next": "^14.2.14",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-charts": "^3.0.0-beta.57",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
@@ -26,6 +30,7 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-scroll": "^1.9.0",
     "react-visibility-sensor": "^5.1.1",
+    "redis": "^4.7.0",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
