--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.4",
     "chartjs-plugin-datalabels": "^2.2.0",
     "cookie-parser": "^1.0.0",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "jose": "^5.2.3",
     "jsonwebtoken": "^9.0.2",
@@ -34,6 +35,7 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "20.11.26",
     "@types/react": "18.2.65",
     "typescript": "5.4.2"
