modified tables and upload files

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,7 +16,9 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "cookie-parser": "^1.0.0",
     "crypto-js": "^4.2.0",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
+    "formidable": "^3.5.2",
     "jose": "^5.2.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
