--- a/my-app/package.json
+++ b/my-app/package.json
@@ -25,11 +25,11 @@
     "next": "^14.2.14",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-charts": "^3.0.0-beta.57",
+    "react-charts": "^0.0.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.3.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-scroll": "^1.9.0",
     "react-visibility-sensor": "^5.1.1",
