--- a/my-app/package.json
+++ b/my-app/package.json
@@ -28,6 +28,7 @@
     "react-charts": "^0.0.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-drag-drop-files": "^2.4.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-lazy-load-image-component": "^1.6.0",
