--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,20 +10,27 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@nextui-org/input": "^2.2.5",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "bull": "^4.16.4",
     "caniuse-lite": "^1.0.30001667",
     "chart.js": "^4.4.4",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "cookie-parser": "^1.0.0",
     "crypto-js": "^4.2.0",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "formidable": "^3.5.2",
+    "ioredis": "^5.4.1",
     "jose": "^5.2.3",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.456.0",
     "mysql2": "^3.9.2",
     "next": "^14.2.14",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-charts": "^0.0.1",
@@ -36,12 +43,17 @@
     "react-scroll": "^1.9.0",
     "react-visibility-sensor": "^5.1.1",
     "redis": "^4.7.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
     "@types/node": "20.11.26",
     "@types/react": "18.2.65",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "5.4.2"
   }
 }
