--- a/my-app/package.json
+++ b/my-app/package.json
@@ -24,6 +24,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "formidable": "^3.5.2",
+    "fs-extra": "^11.2.0",
     "ioredis": "^5.4.1",
     "jose": "^5.2.3",
     "jsonwebtoken": "^9.0.2",
@@ -45,7 +46,8 @@
     "redis": "^4.7.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
