--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@nextui-org/input": "^2.2.5",
+    "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "bull": "^4.16.4",
@@ -41,6 +42,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-quill": "^2.0.0",
     "react-scroll": "^1.9.0",
     "react-visibility-sensor": "^5.1.1",
     "redis": "^4.7.0",
