stats changed, mentors added, organogram added, ui updated

--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -34,7 +34,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/app/(pages)/organogram/page.js"  ],
   "exclude": [
     "node_modules"
   ]
