--- a/my-app/package.json
+++ b/my-app/package.json
@@ -58,6 +58,7 @@
     "@types/react": "18.2.65",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "prettier": "3.6.2",
     "tailwindcss": "^3.4.15",
     "typescript": "5.4.2"
   }
