--- a/my-app/package.json
+++ b/my-app/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "cookie-parser": "^1.0.0",
     "crypto-js": "^4.2.0",
+    "csv-parse": "^6.1.0",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "formidable": "^3.5.2",
@@ -39,6 +40,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-drag-drop-files": "^2.4.0",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-lazy-load-image-component": "^1.6.0",
